# PAOA

./: README.md  find.xml
Lab1/: CMakeLists.txt  main.cpp
Lab2/: CMakeLists.txt  main.cpp  random100.txt  random10000.txt  sorted10000.txt  tool.cpp  tool.h
Lab3/: main.py
Lab4/: main.py
Lab5/: main.py
_windows/: cpp.toolchains.xml
codestyles/: Default.xml
